# Almag_RetSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md  runBinary.sh  runMT.sh  runUT.sh
docs/: UML_DiagramOfSequence.wsd  UML_DiagramOfUseCases.wsd
src/: CMakeLists.txt  main.cpp
src/PluginSpecifics/: HDLCFrameToResponseCommandTranslator.cpp  HDLCFrameToResponseCommandTranslator.hpp  HDLCRespFrameBodyFactory.cpp  HDLCRespFrameBodyFactory.hpp  RetCommandFactory.cpp  RetCommandFactory.hpp
src/PluginSpecifics/CmdConstraints/: AlmagConstraints.hpp  RetConstraints.hpp
src/Utils/: Logger.cpp  Logger.hpp
test/: CMakeLists.txt  main.cpp
test/mt/: AlmagControllerTests.cpp  CMakeLists.txt
test/ut/: CMakeLists.txt  HDLCFrameToResponseCommandTranslator.cpp  HDLCRespFrameBodyInterpreterTests.cpp  HDLCRespFrameBodyTests.cpp
